[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scenes/Enemy/Enemy Spawn Handler/Waves/DefaultWave.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Waves/Wave 1.gd" type="Script" id=2]

[node name="Wave" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="0"]
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="." index="1"]
one_shot = true

[node name="Timer3" type="Timer" parent="." index="2"]
one_shot = true

[node name="Timer4" type="Timer" parent="." index="3"]
one_shot = true

[node name="Timer5" type="Timer" parent="." index="4"]
one_shot = true

[node name="Timer6" type="Timer" parent="." index="5"]
one_shot = true

[node name="Timer7" type="Timer" parent="." index="6"]
one_shot = true

[node name="Timer8" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timer7" to="." method="_on_Timer7_timeout"]
[connection signal="timeout" from="Timer8" to="." method="_on_Timer8_timeout"]
